Post timeline higher z-index issue fixed

--- a/assets/front-end/css/post-timeline/index.css
+++ b/assets/front-end/css/post-timeline/index.css
@@ -177,7 +177,7 @@
   line-height: 30px;
   text-align: center;
   top: 50px;
-  z-index: 99;
+  z-index: 4;
   transition: all .5s;
 }
 
@@ -193,7 +193,7 @@
   text-align: center;
   top: 290px;
   width: 100px;
-  z-index: 99;
+  z-index: 4;
 }
 
 .eael-timeline-post time:before {
